--- a/index.html
+++ b/index.html
@@ -132,27 +132,52 @@
           things that I feel are definitely helpful in creating my final
           project.
         </p>
-        <hr>
+        <hr />
         <h3>Assignment 6 & 7:</h3>
         <br />
         <p>
           For this week's assignment, I found it to be a little bit challenging
           as we are now working with php. At first, I was a little bit confused
-          with how to connect html with php, when I realized that I had to save the 
-          entire file as a php file. Once I was able to naviate that error, I was able 
-          to focus more on writing code, rather than connecting php with html. There were some 
-          other things that did give me trouble though. For one, my liver server 
-          extension I have connected to my vscode was not working, so I had to 
-          manually upload the files to the server. Other than that, working with php wasn't
-          too bad. <br>
-          While working with strings and functions with php, I found it to be a bit more 
-          convenient than working with javascript. I found that it was easier to make the 
-          data connections as I was calling the function right there in the code, as opposed
-          to having to connect the function to html elements. As for the strings, I found 
-          that declaring the variables was a bit odd, as you have to initialize the 
-          variables with a $ in front of the variable name. Other than that, I found php 
-          to be a rather pleasant experience, and I look forward to using php more in the
-          future.
+          with how to connect html with php, when I realized that I had to save
+          the entire file as a php file. Once I was able to naviate that error,
+          I was able to focus more on writing code, rather than connecting php
+          with html. There were some other things that did give me trouble
+          though. For one, my liver server extension I have connected to my
+          vscode was not working, so I had to manually upload the files to the
+          server. Other than that, working with php wasn't too bad. <br />
+          While working with strings and functions with php, I found it to be a
+          bit more convenient than working with javascript. I found that it was
+          easier to make the data connections as I was calling the function
+          right there in the code, as opposed to having to connect the function
+          to html elements. As for the strings, I found that declaring the
+          variables was a bit odd, as you have to initialize the variables with
+          a $ in front of the variable name. Other than that, I found php to be
+          a rather pleasant experience, and I look forward to using php more in
+          the future.
+        </p>
+        <hr />
+        <h3>Assignment 8:</h3>
+        <br />
+        <p>
+          This weeks assignemnt, working with forms in php was very similar to
+          working with forms in javascript. I found that while the syntax was a
+          bit different, the logic was the same. Once you were able to make the
+          connections, and assign the variables to the input fields, it was
+          relatively simple to do. <br />
+          As for the question this week, as what is the difference between GET
+          and POST, the main difference between them is the way data is sent to
+          the server. $_GET retrieves variables sent in the URL. When a form is
+          submitted using the GET method, the variables are passed as part of
+          the URL in the form of key-value pairs, separated by &. The data can
+          be accessed in PHP using the $_GET array. $_POST retrieves variables
+          sent in the HTTP request body. When a form is submitted using the POST
+          method, the variables are sent in the request body and are not visible
+          in the URL. The data can be accessed in PHP using the $_POST array.
+          While both methods are used to send data to the server, $_GET is a bit
+          less secure to use than $_POST, as the data is visible in the URL.
+          <br />
+          Overall, this weeks assignment hasn't been too bad, and I look forward
+          to the upcoming assignments.
         </p>
       </div>
     </div>
