--- a/index.html
+++ b/index.html
@@ -179,6 +179,24 @@
           Overall, this weeks assignment hasn't been too bad, and I look forward
           to the upcoming assignments.
         </p>
+        <hr />
+        <h3>Assignment 9:</h3>
+        <br />
+        <p>
+          Creating the database in MySQL using phpMyAdmin took a bit of familiarization
+          at first. However, once I figured out how to create the database and the table 
+          with the corresponding variables, it was relatively simple to do. For the first step
+          of signing into infinityfree.net, I had no trouble there, as all I had to do was
+          input my username and password. <br />
+          For the second step is where I got a bit lost. The UI for phpMyAdmin was a bit 
+          different on my end, as I didn't have the same options as the tutorial. However, a quick
+          google search helped me figure out how to create a database and a table. <br />
+          As for the third and final step, I was able to insert some values into the database
+          which was pretty easy to do, as the insert tab in phpMyAdmin was pretty straightforward.
+          Enabling for quick and easy insertion of data into the database. <br />
+          <img src="./images/db_php.png" class="img--text" />
+          Here is the final result of the database, with the values I inserted into the table.
+        </p>
       </div>
     </div>
   </body>
